trying to add stuff to dev branch

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	</properties>
 	<dependencies>
 		<!-- Testing change to file in test branch -->
+		<!-- Now adding something to the dev branch -->
 
 		<!-- Spring -->
 		<dependency>
